--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc && webpack --config webpack.config.js"
   },
   "dependencies": {
-    "@nodegui/nodegui": "^0.80.0",
-    "@nodegui/react-nodegui": "^0.8.5",
+    "@nodegui/nodegui": "^0.73.0",
+    "@nodegui/react-nodegui": "^0.6.0",
     "react": "^18.2.0",
     "react-reconciler": "^0.29.0"
   },
@@ -16,6 +16,7 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "ts-node": "^10.9.2"
   }
 }
